<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">English Helper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>

    <string name="my_dictionary">Мой словарь</string>
    <string name="title_activity_main">My English</string>
    <string name="repeat_word">Повторение слов</string>
    <string name="tenses">Времена</string>
    <string name="main_item">Интересный факт</string>
    <string name="iregular_verbs">Таблица глаголов</string>
    <string name="english_tense">Времена </string>
    <string name="repeat">Повторение слов</string>
    <string name="choseNumOfWords">Выберите количество слов для повторения:</string>
    <string name="myresult">Мой результат:</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_subtitle">Добро пожаловать в приложение English Helper</string>
    <string name="study_words_together">Изучай английские слова вместе с нами</string>
    <string name="study_words_together_subtitle">Каждый день мы публикуем новую подборку слов для изучения</string>
    <string name="hint">Необходима подсказка?</string>
    <string name="cancel_chalange">Закончить тест</string>
    <string name="no_name">Этого слова не найдено</string>
    <string name="added_word">добавлено в словарь</string>
    <string name="error">Ошибка</string>
    <string name="dialog_msg">Для повторения слов Ваш словарь должен содержать не менее 10 слов</string>
    <string name="hint_subtitle">Правила использования времен и таблица неправильных глаголов на расстоянии одного клика</string>

    <string name="past_simple_url">http://grammar-tei.com/past-simple-pravila-obrazovaniya-i-sluchai-upotrebleniya/</string>
    <string name="present_simple_url">http://grammar-tei.com/present-simple/</string>
    <string name="future_simple_url">http://grammar-tei.com/future-simple/</string>
    <string name="future_simple_in_the_past_url">https://www.native-english.ru/grammar/future-in-the-past</string>
    <string name="past_continuous_url">http://grammar-tei.com/past-continuous/</string>
    <string name="present_continuous_url">http://grammar-tei.com/present-continuous/</string>
    <string name="future_continuous_url">http://grammar-tei.com/future-continuous/</string>
    <string name="future_continuous_in_the_past_url">http://catchenglish.ru/grammatika/future-continuous-in-the-past.html</string>
    <string name="past_perfect_url">http://grammar-tei.com/past-perfect/</string>
    <string name="present_perfect_url">http://grammar-tei.com/present-perfect/</string>
    <string name="future_perfect_url">http://grammar-tei.com/future-perfect-pravila-obrazovaniya-i-sluchai-upotrebleniya/</string>
    <string name="future_perfect_in_the_past_url">http://catchenglish.ru/grammatika/future-perfect-in-the-past.html</string>
    <string name="past_perfect_continuous_url">http://grammar-tei.com/past-perfect-continuous/</string>
    <string name="present_perfect_continuous_url">http://grammar-tei.com/present-perfect-continuous/</string>
    <string name="future_perfect_continuous_url">http://grammar-tei.com/future-perfect-continuous-pravila-primery-i-uprazhneniya/</string>
    <string name="future_perfect_continuous_in_the_past_url">http://catchenglish.ru/grammatika/future-perfect-continuous-in-the-past.html</string>

    <string name="verbs_url">https://www.native-english.ru/grammar/irregular-verbs</string>
    <string name="no_word">В вашем словаре нет слов. Запишите новые слова сами, или добавьте их с словарного пакета.</string>
    <string name="status_grey">Статус неизвестен</string>
    <string name="status_red">Вам стоит повторить слово</string>
    <string name="status_green">Вы изучили слово</string>
    <string name="connection_error">Нет доступа к интернету.</string>
    <string name="connection_subtitle">Подключите устройство к интернету и попробуйте снова.</string>

    <string name="banner_1">ca-app-pub-8320045635693885/8196640056</string>
    <string name="app_id">ca-app-pub-8320045635693885~6719906859</string>
    <string name="banner_2">ca-app-pub-8320045635693885/2150106456</string>
    <string name="interstial_id">ca-app-pub-8320045635693885/3626839656</string>
    <string name="country_msg">Для загрузки перевода нажмите на слово.</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="theme_color">Цвет темы</string>
    <string name="language">Язык</string>
    <string name="ukr_lang">Українська</string>
    <string name="rus_lang">Русский</string>

    <string name="brown">Коричневый</string>
    <string name="blue">Синий</string>

    <string-array name="laungage">
        <item>Русский</item>
        <item>Українська</item>
    </string-array>
    <string-array name="laungage_values">
        <item>ru</item>
        <item>uk</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="color">
        <item>Коричневый</item>
        <item>Синий</item>
    </string-array>
    <string name="no_connect">Нет подключения к интернету. Проверьте ваше соединение и попробуйте еще раз</string>
    <string name="about">O программе</string>
    <string name="add_word">Введите слово</string>
    <string name="add_translate">Введите перевод</string>
    <string name="pick_number">Выберите количество слов!</string>
    <string name="about_license">This work is licensed under a Creative Commons Attribution 4.0 International License.</string>
    <string name="about_article">Материал статей взят с сайта</string>
    <string name="about_skyeng">Перевод слов осуществляется с помощью Skyeng API</string>
    <string name="studing">Вивчення слів</string>
</resources>