<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_item"
            android:icon="@drawable/ic_mainpage_24dp"
            android:title="@string/main_item" />
        <item
            android:id="@+id/my_vocabluary_item"
            android:icon="@drawable/ic_dictionary_24dp"
            android:title="@string/my_dictionary" />
        <item
            android:id="@+id/english_tense"
            android:icon="@drawable/castle"
            android:title="@string/english_tense" />
        <item
            android:id="@+id/item_iregular_verbs"
            android:icon="@drawable/iwords"
            android:title="@string/iregular_verbs" />
        <item
            android:id="@+id/item_repeat_word"
            android:icon="@drawable/ic_cached_black_24dp"
            android:title="@string/repeat_word"/>
    </group>
</menu>
